# AI-Infra-Guard

./: .dockerignore  .gitignore  .goreleaser.yml  CHANGELOG.md  Dockerfile  Dockerfile_Agent  LICENSE  License.txt  Makefile  README.md  README_CN.md  README_Docker.md  README_ZH.md  api.md  api_zh.md  build_test.sh  changelog_prompt.txt  docker-compose.images.yml  docker-compose.yml  docker.sh  go.mod  go.sum  index.html  index2.html  start.sh  trpc_go.yaml
AIG-PromptSecurity/: .dockerignore  .gitignore  Dockerfile  Prompt安全评测-说明文档.md  README.md  README_ZH.md  Readme.cli_run.md  Readme.plugin.md  a.py  b.py  c.py  cli_run.py  pyproject.toml  remote_metric_plugin.md  remote_my_folder_plugin.md  requirements.txt  simple_prompts.jsonl
AIG-PromptSecurity/.github/: dependabot.yml
AIG-PromptSecurity/.github/workflows/: cd.yml  ci.yml
AIG-PromptSecurity/.xac/: project.yaml
AIG-PromptSecurity/cli/: __init__.py  aig_logger.py  mappings.py  models.py  parsers.py  plugin_commands.py  red_team_runner.py  tool_scanner_cli.py
AIG-PromptSecurity/cli/locales/: README.md
AIG-PromptSecurity/cli/model_utils/: base.py  openailike.py
AIG-PromptSecurity/deepteam/: __init__.py  red_team.py  telemetry.py  utils.py
AIG-PromptSecurity/deepteam/attacks/: __init__.py  base_attack.py
AIG-PromptSecurity/docs/: .gitignore  docusaurus.config.js  sidebars.js
AIG-PromptSecurity/plugin/: example_custom_attack_plugin.py  example_custom_metric_plugin.py  example_custom_vulnerability_plugin.py
AIG-PromptSecurity/tests/: test_clirun_attack_plugin.sh  test_clirun_list_tools.sh  test_clirun_metrics_plugin.sh  test_clirun_multi_plugin.sh  test_clirun_noplugin.sh  test_clirun_remote_plugin.sh  test_clirun_tools_params.sh  test_clirun_vulnerability_plugin.sh  test_custom_vulnerability.py  test_deepteam.py
AIG-PromptSecurity/utils/: strategy_map.json  strategy_map.py
(+2041 files in other folders)
