[project]
name = "deepteam"
version = "0.1.6"
description = "The LLM Red Teaming Framework"
authors = [
    { name = "Jeffrey Ip", email = "jeffreyip@confident-ai.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "aiohttp>=3.11.18",
    "deepeval>=2.9.7",
    "ecoji>=0.1.1",
    "grpcio>=1.67.1",
    "langchain-openai>=0.3.27",
    "loguru>=0.7.3",
    "openai>=1.76.2",
    "pandas>=2.3.0",
    "pyahocorasick>=2.2.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.1",
    "zalgolib>=0.2.2",
]

[project.urls]
Repository = "https://github.com/confident-ai/deepteam"
Documentation = "https://trydeepteam.com"
Issues = "https://github.com/confident-ai/deepteam/issues"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.0",
]
build = [
    "build>=1.0.3",
    "twine>=6.1.0",
]

[tool.black]
line-length = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-m 'not skip_test'"
markers = [
    "skip_test: skip the test",
]

[tool.hatch.build]
exclude = [
    "/tests",
    "/docs",
]
