[project]
name = "aig-promptsecurity"
version = "0.1.0"
description = "The LLM Red Teaming Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "deepeval>=2.9.7",
    "ecoji>=0.1.1",
    "grpcio>=1.67.1",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "openai>=1.76.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyahocorasick>=2.2.0",
    "pyarrow>=21.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.1",
    "xlrd>=2.0.2",
    "zalgolib>=0.2.2",
]
